--- a/Home.html
+++ b/Home.html
@@ -15,47 +15,310 @@
         <nav>
             <ul>
                 <li>
-                    <i class="fa-solid fa-circle-play"></i>
+                    <img src="img/logo.png" alt="logo">
                 </li>
                 <li><a href="Home.html">Home<span></span></a></li>
                 <li><a href="search.html">Search<span></span></a></li>
                 <li><a href="library.html">Library<span></span></a></li>
-                <li><a href="#">About us<span></span></a></li>
+                <li><a href="aboutus.html">About us<span></span></a></li>
             </ul>
         </nav>
     </div>
     <div class="Home-body">
         <div id="greeting">Good Morning</div>
-        <div class="Allalbum">
-            <div class="songlist1">
-                <div class="song-img1" onclick="nevigateAlbum(this)">
-                    <img src="Music_website/Pushpa.png" alt="song1">
-                    <h3>Allu Arjun song</h3>
+        <section class="carousel">
+            <div class="carousel__container">
+                <h2>Hindi Songs</h2>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/ishq_wala.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Ishq Wala Love</h5>
+                        <h6 class="carousel-item__details--subtitle">Vishal-Shekhar</h6>
+                    </div>
                 </div>
-                <div class="song-img2" onclick="nevigateAlbum(this)">
-                    <img src="Music_website/RRR.png" alt="song2">
-                    <h3>Govyachya-Kinaryav song</h3>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/Paniyo_sa.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Paniyon Sa</h5>
+                        <h6 class="carousel-item__details--subtitle">Atif Aslam</h6>
+                    </div>
                 </div>
-                <div class="song-img3" onclick="nevigateAlbum(this)">
-                    <img src="Music_website/SR.png" alt="song3">
-                    <h3>Arman Malik song</h3>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/tu_mile.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Tu Mile Dil Khile</h5>
+                        <h6 class="carousel-item__details--subtitle">Stebin Ben</h6>
+                    </div>
                 </div>
-                <div class="song-img4" onclick="nevigateAlbum(this)">
-                    <img src="Music_website/Sarrainodu.png" alt="song4">
-                    <h3>Darshan Raval song</h3>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/tere naina.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Tere Naina</h5>
+                        <h6 class="carousel-item__details--subtitle">Shankar-Ehsaan-Loy</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/O_mahi.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">O Mahi</h5>
+                        <h6 class="carousel-item__details--subtitle">Arjit Singh/h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/isme_tera.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Tera Ghata</h5>
+                        <h6 class="carousel-item__details--subtitle">Gajendra Verma</h6>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/Ha hassi ban gaye.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Hasi-Male Version</h5>
+                        <h6 class="carousel-item__details--subtitle">Ami Mishra</h6>
+                    </div>
                 </div>
             </div>
-            <div class="songlist2">
-                <div class="song-img5" onclick="nevigateAlbum(this)">
-                    <img src="Music_website/KGF2.png" alt="song5">
-                    <h3>Arjit Singh song</h3>
+        </section>
+
+        <section class="carousel">
+            <div class="carousel__container">
+                <h2>Tamil song</h2>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/beast.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Arebic Kuthu</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
                 </div>
-                <div class="song-img6" onclick="nevigateAlbum(this)">
-                    <img src="Music_website/AVPL.png" alt="song5">
-                    <h3>Arjit Singh song</h3>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/vikram.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Vikram</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/unakku_thaan.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Unakku Thaan</h5>
+                        <h6 class="carousel-item__details--subtitle">Santosh Narayan</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/Thee_thalapathy.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Thee Thalapathy</h5>
+                        <h6 class="carousel-item__details--subtitle">Silambarasan TR</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/badass.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Badass</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/Hukkum.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Hukum-Thalaivar Alappara</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/beastmode.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Beast Mode</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
+
+        <section class="carousel">
+            <div class="carousel__container">
+                <h2>Punjabi song</h2>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/Sarkar_sadi.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Arebic Kuthu</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/siddhu-musawala.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Vikram</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/Wah-Wai-Wahh-.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Unakku Thaan</h5>
+                        <h6 class="carousel-item__details--subtitle">Santosh Narayan</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/Thee_thalapathy.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Thee Thalapathy</h5>
+                        <h6 class="carousel-item__details--subtitle">Silambarasan TR</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/badass.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Badass</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/Hukkum.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Hukum-Thalaivar Alappara</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img class="carousel-item__img"
+                        src="song_img/beastmode.jpg"
+                        alt="people" />
+                    <div class="carousel-item__details">
+                        <div class="controls">
+                            <span class="fas fa-play-circle"></span>
+                            <span class="fas fa-plus-circle"></span>
+                        </div>
+                        <h5 class="carousel-item__details--title">Beast Mode</h5>
+                        <h6 class="carousel-item__details--subtitle">Anirudh Ravichandran</h6>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer class="footer">
             <div class="footer-container">
                 <ul class="inline-list">
@@ -83,7 +346,7 @@
         <div class="icons">
             <!-- fontawesome icons -->
             <i class="fa-solid fa-xl fa-backward-step" id="previous"></i>
-            <i class="fa-solid fa-2xl fa-circle-play" id="masterPlay"></i>
+            <i class="fab fa-twitter" id="masterPlay"></i>
             <i class="fa-solid fa-xl fa-forward-step" id="next"></i>
         </div>
         <div class="progressBarContent">
